--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9,9 +9,9 @@ h1 .typewrite {
   background-size: 0% 1em;
 }
 
-/* 
-.silabus:hover{
-  color:#f7922e;
+
+.silabushover:hover{
+  color:#000;
   text-decoration: none;
 
-} */
+}
