--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -20,12 +20,16 @@ h1 .typewrite {
   height: 5rem;
 }
 
-.hover {
+.hoverrr {
   transition: 0.3s;
 }
 
+.hoverrr:hover {
+  transform: translateY(-6px);
+}
+
 .hover:hover {
-  transform: translateY(-8px);
+  background-color: #fcba41;
 }
 
 .hover-x {
@@ -34,89 +38,6 @@ h1 .typewrite {
 
 .hover-x:hover {
   transform: translateX(6px);
-}
-
-#slider {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-#slider {
-  max-width: 100%;
-  text-align: center;
-  /* margin: 0 auto; */
-}
-
-#overflow {
-  width: 100%;
-  overflow: hidden;
-}
-
-#slides .inner {
-  width: 400%;
-}
-
-#slides .inner {
-  -webkit-transform: translateZ(0);
-  -moz-transform: translateZ(0);
-  -o-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-
-  -webkit-transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
-  -moz-transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
-  -o-transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
-  -ms-transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
-  transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
-
-  -webkit-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
-  -moz-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
-  -o-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
-  -ms-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
-  transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
-}
-
-#slides img {
-  width: 25%;
-  float: left;
-}
-
-#slide1:checked ~ #slides .inner {
-  margin-left: 0;
-}
-
-#slide2:checked ~ #slides .inner {
-  margin-left: -100%;
-}
-
-#slide3:checked ~ #slides .inner {
-  margin-left: -200%;
-}
-
-#slide4:checked ~ #slides .inner {
-  margin-left: -300%;
-}
-
-input[type="radio"] {
-  display: none;
-}
-
-label {
-  background: #CCC;
-  display: inline-block;
-  cursor: pointer;
-  width: 10px;
-  height: 10px;
-  border-radius: 5px;
-}
-
-#slide1:checked ~ label[for="slide1"],
-#slide2:checked ~ label[for="slide2"],
-#slide3:checked ~ label[for="slide3"],
-#slide4:checked ~ label[for="slide4"] {
-  background: #333;
 }
 
 /* =========================================== */
@@ -158,14 +79,14 @@ img {vertical-align: middle;}
   height: 10px;
   width: 10px;
   margin: 0 2px;
-  background-color: #f7922e;
+  background-color: #717171;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
 }
 
 .active {
-  background-color: #717171;
+  background-color: #f7922e;
 }
 
 /* Fading animation */
@@ -177,16 +98,35 @@ img {vertical-align: middle;}
 }
 
 @-webkit-keyframes fade {
-  from {opacity: .4} 
+  from {opacity: .4}
   to {opacity: 1}
 }
 
 @keyframes fade {
-  from {opacity: .4} 
+  from {opacity: .4}
   to {opacity: 1}
 }
 
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
   .text {font-size: 11px}
+}
+
+
+/* ==================================== */
+
+.carousel{
+  width:90%;
+  margin:0px auto;
+}
+.slick-slide{
+  margin:10px;
+}
+.slick-slide img{
+  width:100%;
+  border: 2px solid #000;
+}
+.wrapper .slick-dots li button:before {
+  font-size:20px;
+  color:#f7922e;
 }
