--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -42,81 +42,12 @@ h1 .typewrite {
 
 /* =========================================== */
 
-.slideshow-container {box-sizing: border-box;}
-body {font-family: Verdana, sans-serif;}
-.mySlides {display: none;}
-img {vertical-align: middle;}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  height: 10px;
-  width: 10px;
-  margin: 0 2px;
-  background-color: #717171;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active {
-  background-color: #f7922e;
-}
-
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 2.5s;
-  animation-name: fade ;
-  animation-duration: 2.5s;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .text {font-size: 11px}
-}
 
 
 /* ==================================== */
 
 .carousel{
-  width:90%;
+  width:100%;
   margin:0px auto;
 }
 .slick-slide{
@@ -124,9 +55,38 @@ img {vertical-align: middle;}
 }
 .slick-slide img{
   width:100%;
-  border: 2px solid #000;
+  /* border: 2px solid #000; */
 }
 .wrapper .slick-dots li button:before {
   font-size:20px;
   color:#f7922e;
+}
+
+.testimoni-carousel {
+  /* width:100%; */
+  margin:2px auto;
+}
+
+.aspect-16to9 {
+  /* height: 100%; */
+  width: 100%;
+}
+
+.p-16to9 {
+  position: relative;
+  padding-bottom: 56%;
+  overflow: hidden;
+}
+
+.card-body-content {
+  position: absolute;
+  top: 1rem;
+  bottom: 1rem;
+  right: 1rem;
+  left: 1rem;
+  overflow: hidden;
+}
+
+.gambar {
+  width:100%;
 }
